crates/vaab-syntax/tests/snapshots/parse__named_arguments_at_the_call_site.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"greet(\"Ada\", greeting: \"hi\")\"#)"
---
module
  call
    callee
      name greet
    argument
      text
        literal "Ada"
    argument greeting:
      text
        literal "hi"
