crates/vaab-syntax/tests/snapshots/parse__text_always_interpolates.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"print(\"{greeting}, {name}!\")\"#)"
---
module
  call
    callee
      name print
    argument
      text
        hole
          name greeting
        literal ", "
        hole
          name name
        literal "!"
