crates/vaab-syntax/tests/snapshots/parse__the_one_line_function_form.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(\"to double(n: Int) returns Int = n * 2\\n\")"
---
module
  to double
    parameter n
      type Int
    returns
      type Int
    body
      binary *
        name n
        int 2
