crates/vaab-syntax/tests/snapshots/parse__together_waits_for_every_task_inside.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"\ntogether {\n    for each url in urls {\n        start { fetch(url) }\n    }\n}\n\"#)"
---
module
  together
    block
      for each
        pattern
          bind url
        in
          name urls
        block
          start
            block
              call
                callee
                  name fetch
                argument
                  name url
